--- a/practice-one/package.json
+++ b/practice-one/package.json
@@ -11,7 +11,9 @@
     },
     "dependencies": {
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "@vitejs/plugin-react-swc": "4.3.9", 
+        "vite": "^4.3.9"
     },
     "devDependencies": {
         "@types/react": "^18.0.37",
@@ -24,7 +26,6 @@
         "eslint-plugin-react": "^7.32.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.3.4",
-        "prettier": "2.8.8",
-        "vite": "^4.3.9"
+        "prettier": "2.8.8"
     }
 }
