--- a/practice-one/package.json
+++ b/practice-one/package.json
@@ -1,7 +1,7 @@
 {
     "name": "practice-one",
     "private": true,
-    "version": "0.0.0",
+    "version": "1.0.0",
     "type": "module",
     "scripts": {
         "dev": "vite",
@@ -10,15 +10,16 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@vitejs/plugin-react-swc": "^3.3.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "@vitejs/plugin-react-swc": "4.3.9", 
         "vite": "^4.3.9"
     },
     "devDependencies": {
         "@types/react": "^18.0.37",
         "@types/react-dom": "^18.0.11",
         "@vitejs/plugin-react-swc": "^3.0.0",
+        "autoprefixer": "^10.4.14",
         "eslint": "^8.38.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-plugin-import": "^2.25.3",
@@ -26,6 +27,8 @@
         "eslint-plugin-react": "^7.32.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.3.4",
-        "prettier": "2.8.8"
+        "postcss": "^8.4.24",
+        "prettier": "2.8.8",
+        "tailwindcss": "^3.3.2"
     }
 }
