--- a/practice-two/package.json
+++ b/practice-two/package.json
@@ -9,7 +9,8 @@
         "start": "vite",
         "build": "vite build",
         "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "configure-husky": "npx husky install && npx husky add .husky/pre-commit \"npx --no-install lint-staged\""
     },
     "repository": {
         "type": "github",
@@ -25,17 +26,29 @@
     "devDependencies": {
         "@types/react": "^18.0.37",
         "@types/react-dom": "^18.0.11",
+        "@typescript-eslint/eslint-plugin": "^6.0.0",
+        "@typescript-eslint/parser": "^6.0.0",
         "@vitejs/plugin-react-swc": "^3.0.0",
         "autoprefixer": "^10.4.14",
-        "eslint": "^8.38.0",
+        "eslint": "^8.44.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-plugin-import": "^2.25.3",
         "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-react": "^7.32.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.3.4",
+        "husky": "^8.0.3",
+        "lint-staged": "^13.2.3",
         "postcss": "^8.4.25",
         "prettier": "2.8.8",
         "tailwindcss": "^3.3.2"
+    },
+    "lint-staged": {
+        "**/*.{js,jsx,json}": ["eslint . --fix", "prettier --write ."]
+    },
+    "husky": {
+        "hooks": {
+          "pre-commit": "lint-staged"
+        }
     }
 }
