--- a/practice-two/package.json
+++ b/practice-two/package.json
@@ -9,8 +9,7 @@
         "start": "vite",
         "build": "vite build",
         "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview",
-        "configure-husky": "npx husky install && npx husky add .husky/pre-commit \"npx --no-install lint-staged\""
+        "preview": "vite preview"
     },
     "repository": {
         "type": "github",
