--- a/practice-two/package.json
+++ b/practice-two/package.json
@@ -8,7 +8,7 @@
     "scripts": {
         "start": "vite",
         "build": "vite build",
-        "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+        "lint": "eslint src --ext js,jsx && prettier src --check",
         "preview": "vite preview"
     },
     "repository": {
