--- a/practice-two/package.json
+++ b/practice-two/package.json
@@ -4,7 +4,6 @@
     "author": "Hien Duong",
     "private": true,
     "version": "1.0.0",
-    "type": "module",
     "scripts": {
         "start": "vite",
         "build": "vite build",
@@ -24,6 +23,8 @@
         "vite": "^4.3.9"
     },
     "devDependencies": {
+        "@commitlint/cli": "^17.6.6",
+        "@commitlint/config-conventional": "^17.6.6",
         "@types/react": "^18.0.37",
         "@types/react-dom": "^18.0.11",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -38,17 +39,21 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.3.4",
         "husky": "^8.0.3",
+        "install": "^0.13.0",
         "lint-staged": "^13.2.3",
         "postcss": "^8.4.25",
         "prettier": "2.8.8",
         "tailwindcss": "^3.3.2"
     },
     "lint-staged": {
-        "**/*.{js,jsx,json}": ["eslint . --fix", "prettier --write ."]
+        "**/*.{js,jsx,json}": [
+            "eslint . --fix",
+            "prettier --write ."
+        ]
     },
     "husky": {
         "hooks": {
-          "pre-commit": "lint-staged"
+            "pre-commit": "lint-staged"
         }
     }
 }
