Fix: Add type for package.json

--- a/practice-two/package.json
+++ b/practice-two/package.json
@@ -1,6 +1,7 @@
 {
     "name": "practice-two",
     "description": "Build the UI of a page with React",
+    "type": "module",
     "author": "Hien Duong",
     "private": true,
     "version": "1.0.0",
