--- a/practice-two/package.json
+++ b/practice-two/package.json
@@ -10,7 +10,8 @@
         "build": "vite build",
         "lint": "eslint src --ext js,jsx && prettier src --check",
         "prettier:fix": "prettier src --write",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "prepare": "husky install"
     },
     "repository": {
         "type": "github",
@@ -39,7 +40,7 @@
         "eslint-plugin-react": "^7.32.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.3.4",
-        "husky": "^8.0.3",
+        "husky": "^8.0.0",
         "install": "^0.13.0",
         "lint-staged": "^13.2.3",
         "postcss": "^8.4.25",
