--- a/practice-two/package.json
+++ b/practice-two/package.json
@@ -18,11 +18,11 @@
         "url": "https://github.com/Agility-Internship/Duong-The-Hien-ReactJS"
     },
     "dependencies": {
-        "@vitejs/plugin-react-swc": "^3.3.2",
+        "@vitejs/plugin-react": "^4.0.0",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "vite": "^4.3.9"
+        "vite": "^4.4.7"
     },
     "devDependencies": {
         "@commitlint/cli": "^17.6.6",
@@ -31,7 +31,7 @@
         "@types/react-dom": "^18.0.11",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
-        "@vitejs/plugin-react-swc": "^3.0.0",
+        "@vitejs/plugin-react": "^4.0.0",
         "autoprefixer": "^10.4.14",
         "eslint": "^8.44.0",
         "eslint-config-airbnb": "^19.0.4",
